# opsad

./: .coverage  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude/: launch.json
docs/: deploying.md
docs/tutorials/: energy_tutorial.md  getting_started.md  ocean_tutorial.md  plasma_tutorial.md  satellite_tutorial.md
examples/: ocean_sensor_qc.py  plasma_disruption_detection.py
site/: index.html
site/data/: energy-gb-grid-frequency-live.json  generic-noise-spike-level-shift.json  ocean-ndbc-buoy-46042-live.json  ocean-synthetic-buoy-temperature.json  plasma-solar-wind-at-l1-live.json  plasma-synthetic-langmuir-probe.json  satellite-goes-magnetometer-live.json
src/sigmaflow/: dashboard.py  streaming.py
src/sigmaflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sigmaflow/cli/: main.py
src/sigmaflow/core/: anomaly_result.py  pipeline.py  signal_frame.py
src/sigmaflow/data/: __init__.py
src/sigmaflow/detectors/: __init__.py
src/sigmaflow/domains/: base.py  custom.py  ocean.py  plasma.py
src/sigmaflow/evaluation/: __init__.py  benchmarks.py  compare.py
src/sigmaflow/features/: __init__.py  extractors.py
src/sigmaflow/viz/: __init__.py  (+4 more)
tests/: conftest.py  test_cli.py  test_dashboard.py  test_data_sources.py  test_detectors_deep.py  test_detectors_ml.py  test_detectors_statistical.py  test_domains.py  test_ensemble.py  test_evaluation.py  test_evaluation_extras.py  test_features.py  test_integration.py  test_pipeline.py  test_preprocessors.py  test_signal_frame.py  test_static_export.py  test_synthetic_and_viz.py
(+11 files in other folders)
