[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sigmaflow"
version = "0.2.0"
description = "Cross-domain anomaly detection for scientific time-series"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Iskander", email = "iskanderp01@gmail.com"}]
keywords = ["anomaly-detection", "time-series", "scientific-computing", "plasma", "remote-sensing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "click>=8.0",
    "pyyaml>=6.0",
    "h5py>=3.8",
    "tabulate>=0.9",
]

[project.optional-dependencies]
deep = ["torch>=2.0"]
dashboard = ["dash>=2.14", "dash-bootstrap-components>=1.5", "plotly>=5.18"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.1", "build>=1.0"]

[project.scripts]
sigmaflow = "sigmaflow.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["sigmaflow"]

[tool.ruff]
line-length = 100
target-version = "py310"
